<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_drawer_layout_register"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kitchback"
    android:backgroundTint="@color/back_Whiteness"
    android:backgroundTintMode="src_over">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/new_login"
            android:id="@+id/new_login_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_login_form"
            android:layout_below="@+id/new_login_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/newpassword_string"
            android:id="@+id/new_pass_text"
            android:layout_below="@+id/new_login_form"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/new_pass_form"
            android:layout_below="@+id/new_pass_text"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/confirm_password"
            android:id="@+id/confirm_pass_text"
            android:layout_below="@+id/new_pass_form"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirm_pass_form"
            android:layout_below="@+id/confirm_pass_text"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_string"
            android:id="@+id/register_button_register"
            android:layout_below="@+id/new_name_register"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/your_name"
            android:id="@+id/new_name_text_register"
            android:layout_below="@+id/confirm_pass_form"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_name_register"
            android:layout_below="@+id/new_name_text_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_register"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_gaveta"
        app:menu="@menu/gavetamenu_register" />

</android.support.v4.widget.DrawerLayout>
